Adjust for JDK 21, add memory-verifier, adjust imports